@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclLoadDyld.c,v 1.31 2009/02/03 23:10:57 nijtmans Exp $
+ * RCS: @(#) $Id: tclLoadDyld.c,v 1.32 2009/04/10 18:10:39 das Exp $
  */
 
 #include "tclInt.h"
@@ -198,7 +198,7 @@ TclpDlopen(
     if (tclMacOSXDarwinRelease >= 8)
 #endif
     {
-	dlHandle = dlopen(nativePath, RTLD_NOW | RTLD_LOCAL);
+	dlHandle = dlopen(nativePath, RTLD_NOW | RTLD_GLOBAL);
 	if (!dlHandle) {
 	    /*
 	     * Let the OS loader examine the binary search path for whatever
@@ -208,7 +208,7 @@ TclpDlopen(
 
 	    fileName = Tcl_GetString(pathPtr);
 	    nativeFileName = Tcl_UtfToExternalDString(NULL, fileName, -1, &ds);
-	    dlHandle = dlopen(nativeFileName, RTLD_NOW | RTLD_LOCAL);
+	    dlHandle = dlopen(nativeFileName, RTLD_NOW | RTLD_GLOBAL);
 	}
 	if (dlHandle) {
 	    TclLoadDbgMsg("dlopen() successful");
